Fixed size and alignment for the copy button (#767)

--- a/src/dealDashboard/dealDiscussion/discussionThread/singleComment/singleComment.scss
+++ b/src/dealDashboard/dealDiscussion/discussionThread/singleComment/singleComment.scss
@@ -182,6 +182,12 @@
         border-radius: $border-radius-small;
         padding: $spacing-medium-small;
         margin-bottom: $spacing-normal;
+        .copy-to-clip-button>svg {
+          display: inline-flex;
+          align-self: center;
+          width: 13.5px;
+          height: 13.5px;
+        }
       }
     }
   }
